testament/tests/shouldfail/tfile.nim
discard """
  targets: "c"
  errormsg: "undeclared identifier: 'undefined'"
  file: "notthisfile.nim"
"""

echo undefined
